<resources>
    <string name="auth_failed">Incorrect username password combination.</string>
    <string name="app_name">HarmWatchER</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="back">Back</string>
    <string name="call">Call</string>
    <string name="get_location">Get location</string>
    <string name="good">Good</string>
    <string name="status">Status</string>
    <string name="issue_detected">Issue Detected</string>
    <string name="alert_ems">Alert EMS</string>
    <string name="add">Add</string>
    <string name="signout">Sign Out</string>
    <string name="login">Login</string>
    <string name="submit">submit</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_here">Register Here!</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="Phone">Phone</string>
    <string name="emergency_contact_fname">Emergency Contact First</string>
    <string name="e_c_last_name">E.C. Last Name</string>
    <string name="e_c_phone_number">E.C. Phone number</string>
    <string name="age_in_months">Age In Months</string>
</resources>
