<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/status"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:id="@+id/prompt"
        android:textSize="20sp" />

    <TextView
        android:text="@string/issue_detected"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/status"
        android:textSize="36sp"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/prompt"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/location"
        style="@android:style/Widget.Button.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:text="@string/get_location" />

    <Button
        android:id="@+id/call"
        style="@android:style/Widget.Button.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location"
        android:layout_centerHorizontal="true"
        android:text="@string/call" />

    <Button
        android:id="@+id/back"
        style="@android:style/Widget.Button.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/back" />

    <Button
        android:id="@+id/ems"
        style="@android:style/Widget.Button.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:background="@android:drawable/ic_notification_overlay"
        android:text="@string/alert_ems"
        android:textSize="13sp" />

</RelativeLayout>