<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/status"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:id="@+id/prompt"
        android:textSize="20sp" />

    <TextView
        android:text="@string/good"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/status"
        android:textSize="36sp"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/prompt"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/get_location"
        style="@android:style/Widget.Button.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:id="@+id/location" />

    <Button
        android:text="@string/call"
        style="@android:style/Widget.Button.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/call"
        android:layout_below="@+id/location"
        android:layout_centerHorizontal="true"/>
    <Button
        android:text="@string/back"
        style="@android:style/Widget.Button.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/back" />

</RelativeLayout>