<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/name"
        android:labelFor="@id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textAlignment="center"
        android:textEditNoPasteWindowLayout="@android:style/Widget.DeviceDefault.EditText" />

    <EditText
        android:id="@+id/age"
        android:labelFor="@id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/age"
        android:textAlignment="center"
        android:textEditNoPasteWindowLayout="@android:style/Widget.DeviceDefault.EditText" />

    <EditText
        android:id="@+id/phone"
        android:labelFor="@id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/age"
        android:layout_below="@+id/age"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/Phone"
        android:textAlignment="center"
        android:textEditNoPasteWindowLayout="@android:style/Widget.DeviceDefault.EditText" />

    <Button
        android:id="@+id/submit"
        style="@style/Widget.AppCompat.Button"
        android:alpha ="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/back"
        style="@style/Widget.AppCompat.Button"
        android:alpha="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/back" />

</RelativeLayout>