<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ufl.harmwatchr.harmwatcher.Login">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:ems="20"
        android:labelFor="@id/username"
        android:text="@string/username"
        android:textAlignment="center"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:minHeight="50dp"
        android:textEditNoPasteWindowLayout="@android:style/Widget.DeviceDefault.EditText" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="20"
        android:text="@string/username"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:selectAllOnFocus="true"
        android:minHeight="50dp"
        android:textEditNoPasteWindowLayout="@android:style/Widget.DeviceDefault.EditText"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/Login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/Register"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/register"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        android:textStyle="bold" />



</RelativeLayout>
